# multiarg

./: .gitignore  .travis.yml  ChangeLog  LICENSE  NEWS  README  README.md  TODO  current-versions.txt  genCabal.hs  generate  known-working-dependencies  minimum-versions.txt  multiarg.cabal
System/Console/: MultiArg.hs
System/Console/MultiArg/: .dir-locals.el  Combinator.hs  Error.hs  GetArgs.hs  MultiArg.hs  Option.hs  Prim.hs  QuickCheckHelpers.hs  SampleParser.hs  SimpleParser.hs  TextNonEmpty.hs
binaries/: sample.hs
lib/: LICENSE  Multiarg.hs  NEWS  multiarg.cabal
lib/Multiarg/: Combinator.hs  CommandLine.hs  Complete.hs  Examples.hs  Internal.hs  Limeline.hs  Maddash.hs  Mode.hs  Option.hs  Prim.hs  SampleParser.hs  Types.hs  Util.hs  Vocabulary.hs
lib/Multiarg/Examples/: Grover.hs  Telly.hs
lib/Multiarg/Machine/: Arguments.hs  Error.hs  Function.hs  Output.hs  State.hs  Transducer.hs
lib/Multiarg/Machine/Option/: Long.hs  Short.hs
lib/Multiarg/Maddash/: Arguments.hs  Error.hs  Output.hs  Pallet.hs  State.hs  Transducer.hs
lib/Multiarg/Maddash/Option/: Long.hs  Short.hs
lib/Multiarg/Mode/: Internal.hs
lib/System/Console/: MultiArg.hs
lib/System/Console/MultiArg/: Combinator.hs  CommandLine.hs  Error.hs  Option.hs  Prim.hs  QuickCheckHelpers.hs  SampleParser.hs  SimpleParser.hs  TextNonEmpty.hs
sunlight/2014/02/24/120913/wusz/: current-7.4.1-passed.txt  current-7.6.3-passed.txt  lowest-7.4.1-passed.txt
sunlight/2014/02/24/121258/lwdp/: current-7.4.1-passed.txt  current-7.6.3-passed.txt  lowest-7.4.1-passed.txt
sunlight/2014/03/01/190206/joji/: current-7.4.1-passed.txt  current-7.6.3-passed.txt  lowest-7.4.1-passed.txt
sunlight/2014/03/01/201215/wkhj/: current-7.4.1-passed.txt  current-7.6.3-passed.txt  lowest-7.4.1-passed.txt
test-bin/: multiarg-test-bin.cabal  rebuild  tailIntersperse.hs  tailNoIntersperse.hs
tests/: Decrees.hs  Ernie.hs  Grover.hs  Makeopt.hs  Telly.hs  grover-main.hs  multiarg-test.hs  multiarg-tests.hs  telly-main.hs
tests/Grover/: Tests.hs
tests/Multiarg/Maddash/: #Tests.hs#  .#Tests.hs  Instances.hs  Tests.hs
tests/Multiarg/Types/: Instances.hs
tests/Telly/: Tests.hs
