Name: multiarg
Version: 0.1.0.0
Cabal-version: >=1.8
Build-Type: Simple
License: MIT
Copyright: 2011 Omari Norman.
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.smileystation.com/pantry
bug-reports: omari@smileystation.com
synopsis: Command line parser of multiple arguments
description: Command line parser of multiple arguments

Library
    Build-depends:
        base ==4.*,
        text ==0.11.*,
        explicit-exception ==0.1.*,
        containers ==0.4.*,
        QuickCheck ==2.4.*,
        transformers == 0.2.*
        

    Exposed-modules:
        System.Console.MultiArg,
        System.Console.MultiArg.Combinator,
        System.Console.MultiArg.Error,
        System.Console.MultiArg.Option,
        System.Console.MultiArg.Prim,
        System.Console.MultiArg.QuickCheckHelpers,
        System.Console.MultiArg.SampleParser,
        System.Console.MultiArg.SimpleParser,
        System.Console.MultiArg.TextNonEmpty

    ghc-options: -Wall
