Name: multiarg-test-bin
Version: 0.3.0.0
Cabal-version: >= 1.8
Build-Type: Simple
License: MIT
Copyright: 2011-2012 Omari Norman.
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: https://github.com/massysett/multiarg
bug-reports: omari@smileystation.com
Category: Console, Parsing
License-File: LICENSE
synopsis: Test binaries for multiarg
description: Test binaries for multiarg

Executable tailIntersperse
  Build-depends:
    base ==4.*,
    multiarg ==0.3.0.0

  main-is: tailIntersperse.hs
  ghc-options: -Wall

Executable tailNoIntersperse
  Build-depends:
    base ==4.*,
    multiarg ==0.3.0.0

  main-is: tailNoIntersperse.hs
  ghc-options: -Wall
